test_files/netlist_validation/valid/valid_07.net
V1 VCC 0 5
R1 VCC N001 1k
R2 N001 N002 2k
C1 N002 0 47n
.tran 2m
.backanno
.end
